--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ required: sudo
 before_install:
   - sudo apt-get update -y
   - sudo apt-get install -y git wget openjdk-8-jdk openjdk-8-jre
+  - wget http://mirrors.sonic.net/apache/maven/maven-3/3.3.3/binaries/apache-maven-3.3.3-bin.tar.gz
+  - tar -zxf apache-maven-3.3.3-bin.tar.gz
+  - sudo  cp -R apache-maven-3.3.3 /usr/local
+  - sudo ln -s /usr/local/apache-maven-3.3.3/bin/mvn /usr/bin/mvn
 
 language: java
 
